--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,10 +72,12 @@ pyinstaller = "*"
 sniffer = "*"
 MacFSEvents = { version = "*", platform = "darwin" }
 pync = { version = "*", platform = "darwin" }
+ipdb = "*"  # export PYTHONBREAKPOINT=ipdb.set_trace
 
 # Notebooks
+ipython = "^7.8.0"
 jupyter = "^1.0.0"
-ipdb = "*"  # export PYTHONBREAKPOINT=ipdb.set_trace
+nbstripout = "^0.3.6"
 
 [tool.poetry.scripts]
 
@@ -85,7 +87,6 @@ twerk-gui = "twerk.gui:main"
 [tool.black]
 
 target-version = ["py36", "py37"]
-skip-string-normalization = true
 
 [build-system]
 
