--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ python = "^3.7"
 bullet = "^2.1.0"
 click = "^7.0"
 minilog = "^1.2.4"
+ipdb = "~0.12.2"  # export PYTHONBREAKPOINT=ipdb.set_trace
 
 # Browser automation
 splinter = "^0.11.0"
@@ -72,7 +73,6 @@ pyinstaller = "*"
 sniffer = "*"
 MacFSEvents = { version = "*", platform = "darwin" }
 pync = { version = "*", platform = "darwin" }
-ipdb = "*"  # export PYTHONBREAKPOINT=ipdb.set_trace
 
 # Notebooks
 ipython = "^7.8.0"
