--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,5 +1,6 @@
 environment:
   global:
+    POETRY_PREVIEW: true
     RANDOM_SEED: 0
   matrix:
     - PYTHON_MAJOR: 3
@@ -15,7 +16,7 @@ install:
   - set PATH=C:\Python%PYTHON_MAJOR%%PYTHON_MINOR%;%PATH%
   - set PATH=C:\Python%PYTHON_MAJOR%%PYTHON_MINOR%\Scripts;%PATH%
   # Install system dependencies
-  - curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | POETRY_PREVIEW=1 python
+  - curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python
   - set PATH=%USERPROFILE%\.poetry\bin;%PATH%
   - make doctor
   # Install project dependencies
