--- a/.verchew.ini
+++ b/.verchew.ini
@@ -6,7 +6,7 @@ version = GNU Make
 [Python]
 
 cli = python
-version = drwxr-xr-x    11 Browning  staff   352B Oct  5  2018 strappydoo.7
+version = 3.7
 
 [Poetry]
 
