--- a/pytest.ini
+++ b/pytest.ini
@@ -11,6 +11,8 @@ addopts =
     --cov-report=term-missing:skip-covered
     --no-cov-on-fail
 
+    --no-success-flaky-report
+
 cache_dir = .cache
 
 markers =
